# chat_server

./: .gitignore  CMakeLists.txt  README.md  chatserver.cpp  chatserver.h  client_session.cpp  client_session.h  main.cpp
docs/: EXEC_PLAN.md
persistence/: sqliterepository.cpp  sqliterepository.h
protocol/: protocolcodec.cpp  protocolcodec.h
services/: authservice.cpp  authservice.h
tests/: tst_authservice.cpp  tst_protocolcodec.cpp  tst_sqliterepository.cpp
